--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
                         <h1 class="m-0">
                             <a href="#">
                                 
-                                <img width="66" src="./src/img/bird.png" align="left">
+                                <!-- <img width="66" src="./src/img/bird.png" align="left"> -->
                            
-                                    <title>KHS For Cancer</title>
+                                    <title>Students For Cancer</title>
                                     <defs>
                                         <linearGradient x1="0%" y1="100%" y2="0%" id="logo-a">
                                             <stop stop-color="E830B1" stop-opacity="0" offset="0%"/>
