--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <div class="container">
                     <div class="hero-inner">
                         <div class="hero-copy">
-                            <h1 class="hero-title h2-mobile mt-0 is-revealing">KHS For Cancer</h1>
+                            <h1 class="hero-title h2-mobile mt-0 is-revealing">Students For Cancer</h1>
                             <p class="hero-paragraph is-revealing">A group of highschoolers helping create comfort kits for new patients at the Norris Cotton Cancer Center in Keene NH. </p>
                             <p class="hero-cta is-revealing"><a class="button button-primary button-shadow" href="#">Learn More</a></p>
                         </div>
