--- a/index.html
+++ b/index.html
@@ -398,7 +398,7 @@
                             <a href="#">FAQ's</a>
                         </li>
                         <li>
-                            <a href="#">License</a>
+                            <a href="https://github.com/YaBoyWonder/BookofBars/blob/master/LICENSE">License</a>
                         </li>
                     </ul>
                     <ul class="footer-social-links list-reset">
