--- a/about.html
+++ b/about.html
@@ -258,7 +258,7 @@
 
                         
                     </ul>
-                    <div class="footer-copyright">&copy; 2019 KHSFC, Created by <a href="https://www.github.com/YaBoyWonder">Rahul Ch.</a></div>
+                    <div class="footer-copyright">&copy; 2019 SFC, Created by <a href="https://www.github.com/YaBoyWonder">Rahul Ch.</a></div>
                 </div>
             </div>
         </footer>
