--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                                 <div class="feature-inner">
                                     <div class="feature-icon">
                                         <!-- <svg width="48" height="48" xmlns="http://www.w3.org/2000/svg"> -->
-                                            <img src="./src/img/goodieBag.jpg">
+                                            <img src="./src/img/gitStatus.PNG" style="height: 20px; width: 800px;" >
                                             <defs>
                                                 <linearGradient x1="50%" y1="100%" x2="50%" y2="0%" id="feature-1-a">
                                                     <stop stop-color="#007CFE" stop-opacity="0" offset="0%"/>
@@ -146,11 +146,12 @@
                                             </g>
                                         </svg>
                                     </div>
-                                    <h4 class="feature-title h3-mobile">Info</h4>
-                                    <p class="text-sm">Information text will be provided into this textbox that will give description    -+rah.</p>
+                                    <br>
+                                    <h4 class="feature-title h3-mobile">Website Live</h4>
+                                    <p class="text-sm">Students for Cancer website is now running online with its own domain! 🌐</p>
                                 </div>
                             </div>
-                            <div class="feature is-revealing">
+                         <!--   <div class="feature is-revealing">
                                 <div class="feature-inner">
                                     <div class="feature-icon">
                                             <img src="./src/img/goodieBag.jpg">
@@ -224,7 +225,7 @@
                                     <h4 class="feature-title h3-mobile">Info</h4>
                                     <p class="text-sm">Information text will be provided into this textbox that will give description    -+rah.</p>
                                 </div>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
                 </div>
@@ -420,7 +421,7 @@
                         </li> -->
                 
                     </ul>
-                    <div class="footer-copyright">&copy; 2019 KHSFC, Created by <a href="https://www.github.com/YaBoyWonder">Rahul Ch.</a></div>
+                    <div class="footer-copyright">&copy; 2019 SFC, Created by <a href="https://www.github.com/YaBoyWonder">Rahul Ch.</a></div>
                 </div>
             </div>
         </footer>
