--- a/about.html
+++ b/about.html
@@ -55,7 +55,8 @@
                             <center>
                                 <h1 class="hero-title h2-mobile mt-0 is-revealing">What Our Goal Is</h1>
                                 <br>
-                            <p class="hero-paragraph is-revealing">Cancer is a growing disease that destroys body tissues and cells in living organisms as it spreads across the system. As highschoolers, we want to be able to help people dealing with cancer in way that can be beneficial. And so by collecting items that patients need, we will donate them to the <a href="https://www.cheshire-med.com/cancer_center.html">NCCC</a> who will help give them to patients dealing with this disease. It's our little way of saying <b>we want to help.</b> </p>
+                            <p class="hero-paragraph is-revealing">Cancer is a growing disease that destroys body tissues and cells in living organisms as it spreads across the system. As highschoolers, we want to be able to help people dealing with cancer in way that can be beneficial. And so by collecting items that patients need, we will donate them to the <a href="https://www.cheshire-med.com/cancer_center.html">NCCC</a> who will help give them to patients dealing with this disease. It's our little way of saying <b>we want to help.</b> If you are interested in donating, please head <a href="./donation.html">here.</a></p>
+                            <!-- <center><a class="button button-primary button-shadow" href="./donation.html">Donate</a></center> -->
                             <br>
                             <br>
  <br>
