--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Students For Cancer</title>
+    <title>Students For Hope</title>
     <link href="https://fonts.googleapis.com/css?family=Hind+Vadodara:400,700|Mukta:500,700" rel="stylesheet">
     <link rel="stylesheet" href="dist/css/style.css">
     <!-- <link rel="stylesheet" href="dist/css/progress.css"> -->
@@ -24,7 +24,7 @@
                                 
                                 <!-- <img width="66" src="./src/img/bird.png" align="left"> -->
                            
-                                    <title>Students For Cancer</title>
+                                    <title>Students For Hope</title>
                                     <defs>
                                         <linearGradient x1="0%" y1="100%" y2="0%" id="logo-a">
                                             <stop stop-color="E830B1" stop-opacity="0" offset="0%"/>
