--- a/donation.html
+++ b/donation.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Students For Cancer</title>
+    <title>Students For Hope</title>
     <link href="https://fonts.googleapis.com/css?family=Hind+Vadodara:400,700|Mukta:500,700" rel="stylesheet">
     <link rel="stylesheet" href="dist/css/style.css">
     <!-- <link rel="stylesheet" href="dist/css/progress.css"> -->
@@ -25,7 +25,7 @@
                                 
                                 <!-- <img width="66" src="./src/img/bird.png" align="left"> -->
                            
-                                    <title>Students For Cancer</title>
+                                    <title>Students For Hope</title>
                                     <defs>
                                         <linearGradient x1="0%" y1="100%" y2="0%" id="logo-a">
                                             <stop stop-color="E830B1" stop-opacity="0" offset="0%"/>
@@ -56,7 +56,7 @@
                             <center>
                                 <h1 class="hero-title h2-mobile mt-0 is-revealing">Donations</h1>
                                 <br>
-                            <p class="hero-paragraph is-revealing">Everything that we recieve is given to the <a href="https://www.cheshire-med.com/cancer_center.html">NCCC </a>to help benefit and support them. If you would like to donate items to Students For Cancer, or have any questions on specific items, please contact us at our email  <b>donations.studentsforcancer@gmail.com  </b> </p>
+                            <p class="hero-paragraph is-revealing">Everything that we recieve is given to the <a href="https://www.cheshire-med.com/cancer_center.html">NCCC </a>to help benefit and support them. If you would like to donate items to Students For Hope, or have any questions on specific items, please contact us at our email  <b>donations.studentsforcancer@gmail.com  </b> </p>
                             <br>
                             <br>
  <br>
