--- a/donation.html
+++ b/donation.html
@@ -47,7 +47,7 @@
                 </div>
             </div>
         </header>
-
+ 
         <main>
             <!-- <section class="hero"> -->
                 <div class="container">
@@ -56,7 +56,7 @@
                             <center>
                                 <h1 class="hero-title h2-mobile mt-0 is-revealing">Donations</h1>
                                 <br>
-                            <p class="hero-paragraph is-revealing">Everything that we recieve is given to the <a href="https://www.cheshire-med.com/cancer_center.html">NCCC </a>to help benefit and support them. If you would like to donate items to Students For Hope, or have any questions on specific items, please contact us at our email  <b>donations.studentsforcancer@gmail.com  </b> </p>
+                            <p class="hero-paragraph is-revealing">Everything that we recieve is given to the <a href="https://www.cheshire-med.com/cancer_center.html">NCCC </a>to help benefit and support them. If you would like to donate items to Students For Hope, or have any questions on specific items, please contact us at our email  <b>donations.studentsforhope@gmail.com  </b> </p>
                             <br>
                             <br>
  <br>
