--- a/donation.html
+++ b/donation.html
@@ -174,10 +174,10 @@
                                         <div class="feature-icon">
                                             <center>
                                                   <!--  <img src="./src/img/circle_karthik.png" width="160" height="101"> -->
-													<font size="4">• Adult Colouring Books</font>
+													<font size="4">• Adult Coloring Books</font>
 													<br>
 													<br>
-													<font size="4">• Colouring Pencils</font>
+													<font size="4">• Coloring Pencils</font>
 													<br>
 													<br>
 													<font size="4">• Sleep Masks</font>
