--- a/donation.html
+++ b/donation.html
@@ -14,6 +14,18 @@
 
 
 </head>
+<style>
+
+    /* FOOTER EMAIL   */
+    
+    div.footerEmail {
+          position: relative; 
+          right: 190px;
+          bottom: 16px;
+        }
+
+
+</style>
 <body class="is-boxed has-animations">
     <div class="body-wrap boxed-container">
         <header class="site-header">
@@ -56,11 +68,13 @@
                             <center>
                                 <h1 class="hero-title h2-mobile mt-0 is-revealing">Donations</h1>
                                 <br>
-                            <p class="hero-paragraph is-revealing">Everything that we recieve is given to the <a href="https://www.cheshire-med.com/cancer_center.html">NCCC </a>to help benefit and support them. If you would like to donate items to Students For Hope, or have any questions on specific items, please contact us at our email  <b>donations.studentsforhope@gmail.com  </b> </p>
+                                <p class="hero-paragraph is-revealing">All proceeds recevied are given to the <a href="https://www.cheshire-med.com/cancer_center.html" target="_blank">NCCC </a>. If you would like to write a cheque or donate items to <br> <i>Students For Hope</i>, or have any other questions, please contact us at 
+                                    <b>donations.studentsforhope@gmail.com</b></p> 
+                                <!-- <p class="hero-paragraph is-revealing">Everything that we recieve is given to the <a href="https://www.cheshire-med.com/cancer_center.html" target="_blank">NCCC </a>to help benefit and support them. If you would like to donate items to Students For Hope, or have any questions on specific items, please contact us at our email  <b>donations.studentsforhope@gmail.com  </b> </p> -->
                             <br>
                             <br>
  <br>
-                            <p class="hero-paragraph is-revealing"><font size="5"><u>What We Require</u></font></p>
+                            <p class="hero-paragraph is-revealing"><font size="5"><u>What We Need</u></font></p>
 
 
                         </center>
@@ -263,7 +277,10 @@
 
                         
                     </ul>
-                    <div class="footer-copyright">&copy; 2019 SFC, Created by <a href="https://www.github.com/YaBoyWonder">Rahul Ch.</a></div>
+                    <div class="footer-copyright">&copy; 2019 SFC, Created by <a href="https://www.github.com/YaBoyWonder">Rahul Ch.</a>
+                        <div class="footerEmail">
+                                <br><br>info.studentsforhope@gmail.com   </div>
+                            </div>
                 </div>
             </div>
         </footer>
