--- a/index.html
+++ b/index.html
@@ -169,8 +169,8 @@
                                         </svg>
                                     </div>
                                     <br>
-                                    <h4 class="feature-title h3-mobile"><u>Started Receving Donations</u></h4>
-                                    <p class="text-sm">With the support and advice of our club advisor, Patrick Lagace, we are making smooth progress towards our goal. We have already started recieving donations! Thank you for the overwhelming support from our community.</p>
+                                    <h4 class="feature-title h3-mobile"><u>Started Receiving Donations</u></h4>
+                                    <p class="text-sm">With the support and advice of our club advisor, Patrick Lagace, we are making smooth progress towards our goal. We have already started receiving donations! Thank you for the overwhelming support from our community.</p>
                                 </div>
                             </div>
                          <!--   <div class="feature is-revealing">
