newPhoto and Dates Added

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                                 <div class="feature-inner">
                                     <div class="feature-icon">
                                         <!-- <svg width="48" height="48" xmlns="http://www.w3.org/2000/svg"> -->
-                                            <img src="./src/img/fixed2Groupphoto.PNG" style="height: 150px; width: 5000px;" >
+                                            <img src="./src/img/donationA.jpg" style="height: 150px; width: 5000px;" >
                                             <defs>
                                                 <linearGradient x1="50%" y1="100%" x2="50%" y2="0%" id="feature-1-a">
                                                     <stop stop-color="#007CFE" stop-opacity="0" offset="0%"/>
@@ -170,7 +170,7 @@
                                     </div>
                                     <br>
                                     <h4 class="feature-title h3-mobile"><u>Thanksgiving</u> <br>🦃</h4>
-                                    <p class="text-sm">We have reached our first deadline for Thanksgiving. Thank you to the Toadstool Bookshop, the Panzer, Boswell, Gigliello-Roy, Lewis, and Brown families for donating items!            <!--   <br> <br><br><b>11/26/19</b>  --></p>
+                                    <p class="text-sm">We have reached our first deadline for Thanksgiving. Thank you to the Toadstool Bookshop, the Panzer, Boswell, Gigliello-Roy, Lewis, and Brown families for donating items!               <br> <br><br><b>11/26/19</b>  </p>
                                 </div>
                             </div>
 
@@ -179,7 +179,7 @@
                                 <div class="feature-inner">
                                     <div class="feature-icon">
                                         <!-- <svg width="48" height="48" xmlns="http://www.w3.org/2000/svg"> -->
-                                            <img src="./src/img/firstDonation.jpg" style="height: 150px; width: 1800px;" >
+                                            <img src="./src/img/fixed2Groupphoto.PNG" style="height: 150px; width: 1800px;" >
                                             <defs>
                                                 <linearGradient x1="50%" y1="100%" x2="50%" y2="0%" id="feature-1-a">
                                                     <stop stop-color="#007CFE" stop-opacity="0" offset="0%"/>
@@ -198,7 +198,7 @@
                                     </div>
                                     <br>
                                     <h4 class="feature-title h3-mobile"><u>Started Receiving Donations</u></h4>
-                                    <p class="text-sm">With the support and advice of our club advisor, Patrick Lagace, we are making smooth progress towards our goal. We have already started receiving donations! Thank you for the overwhelming support from our community. <!-- <br><br><b>11/26/19</b> -->  </p>
+                                    <p class="text-sm">With the support and advice of our club advisor, Patrick Lagace, we are making smooth progress towards our goal. We have already started receiving donations! Thank you for the overwhelming support from our community.  <br><br><b>11/8/19</b>   </p>
                                 </div>
                             </div>
 
