--- a/index.html
+++ b/index.html
@@ -76,7 +76,12 @@
                         </div>
                         <div class="hero-illustration is-revealing">
                             <!-- <svg width="528" height="413" viewBox="0 0 528 413" xmlns="http://www.w3.org/2000/svg"> -->
-                                <img width="30" height="50" src="./src/img/small_cancer1.png">
+
+                                
+                                <img align="right" style="position: relative;  left: 136px"   src="./src/img/temp4.gif">
+
+
+
                                 <defs>
                                     <linearGradient x1="50%" y1="100%" x2="50%" y2="0%" id="hero-illustration-a">
                                         <stop stop-color="#F5458A" stop-opacity="0" offset="0%"/>
