--- a/donation.html
+++ b/donation.html
@@ -63,7 +63,7 @@
 
 .dropdown:hover .dropdown-content {display: block;}
 
-.dropdown:hover .dropbtn {background-color: #3e8e41;}
+.dropdown:hover .dropbtn {background-color: #894EE5;}
 
 
 
