--- a/donation.html
+++ b/donation.html
@@ -334,7 +334,7 @@
 
                         
                     </ul>
-                    <div class="footer-copyright">&copy; 2019 SFC, Created by <a href="https://www.github.com/YaBoyWonder">Rahul Ch.</a>
+                    <div class="footer-copyright">&copy; 2019 SFC, Created by Rahul Ch.
                         <div class="footerEmail">
                             <br><br><a href="mailto:info.studentsforhope@gmail.com?Subject=StudentsForHope%20Information" target="_top">info.studentsforhope@gmail.com</a>   </div>
                             </div>
