--- a/index.html
+++ b/index.html
@@ -151,6 +151,38 @@
                 <div class="container">
                     <div class="features-inner section-inner">
                         <div class="features-wrap">
+
+
+                                <div class="feature is-revealing">
+                                        <div class="feature-inner">
+                                            <div class="feature-icon">
+                                                <!-- <svg width="48" height="48" xmlns="http://www.w3.org/2000/svg"> -->
+                                                    <img src="./src/img/christmas_donation.jpg" style="height: 150px; width: 120px;" >
+                                                    <defs>
+                                                        <linearGradient x1="50%" y1="100%" x2="50%" y2="0%" id="feature-1-a">
+                                                            <stop stop-color="#007CFE" stop-opacity="0" offset="0%"/>
+                                                            <stop stop-color="#007DFF" offset="100%"/>
+                                                        </linearGradient>
+                                                        <linearGradient x1="50%" y1="0%" x2="50%" y2="100%" id="feature-1-b">
+                                                            <stop stop-color="#FF4F7A" stop-opacity="0" offset="0%"/>
+                                                            <stop stop-color="#FF4F7A" offset="100%"/>
+                                                        </linearGradient>
+                                                    </defs>
+                                                    <g fill="none" fill-rule="evenodd">
+                                                        <path d="M8 0h24v24a8 8 0 0 1-8 8H0V8a8 8 0 0 1 8-8z" fill="url(#feature-1-a)"/>
+                                                        <path d="M48 16v24a8 8 0 0 1-8 8H16c0-17.673 14.327-32 32-32z" fill="url(#feature-1-b)"/>
+                                                    </g>
+                                                </svg>
+                                            </div>
+                                            <br>
+                                            <h4 class="feature-title h3-mobile"><u>Holidays Season</u> <br>❄️</h4>
+                                            <p class="text-sm">As the holidays approach us, we have been able to complete another successful donation this cold season. Thank you to Walmart, KHS SALC, the Panzer, Sreepada, and Lewis families for contributing to our cause!                <br> <br><br><b>12/23/19</b>  </p>
+                                        </div>
+                                    </div>
+
+                                    
+
+
                             <div class="feature is-revealing">
                                 <div class="feature-inner">
                                     <div class="feature-icon">
@@ -174,7 +206,7 @@
                                     </div>
                                     <br>
                                     <h4 class="feature-title h3-mobile"><u>Thanksgiving</u> <br>🦃</h4>
-                                    <p class="text-sm">We have reached our first deadline for Thanksgiving. Thank you to the Toadstool Bookshop, the Panzer, Boswell, Gigliello-Roy, Lewis, and Brown families for donating items!               <br> <br><br><b>11/26/19</b>  </p>
+                                    <p class="text-sm">We have reached our first deadline for Thanksgiving. Thank you to the Toadstool Bookshop, the Panzer, Boswell, Gigliello-Roy, Lewis, and Brown families for donating items!            <br>   <br> <br><br><b>11/26/19</b>  </p>
                                 </div>
                             </div>
 
@@ -202,7 +234,7 @@
                                     </div>
                                     <br>
                                     <h4 class="feature-title h3-mobile"><u>Started Receiving Donations</u></h4>
-                                    <p class="text-sm">With the support and advice of our club advisor, Patrick Lagace, we are making smooth progress towards our goal. We have already started receiving donations! Thank you for the overwhelming support from our community.  <br><br><b>11/8/19</b>   </p>
+                                    <p class="text-sm">With the support and advice of our club advisor, Patrick Lagace, we are making smooth progress towards our goal. We have already started receiving donations! Thank you for the overwhelming support from our community.   <br> <br><br><b>11/8/19</b>   </p>
                                 </div>
                             </div>
 
@@ -235,7 +267,7 @@
 
                 
                     </ul>
-                    <div class="footer-copyright">&copy; 2019 SFC, Created by <a href="https://www.github.com/YaBoyWonder">Rahul Ch.</a>
+                    <div class="footer-copyright">&copy; 2019 SFC, Created by Rahul Ch.
                     <div class="footerEmail">
                     <br><br><a href="mailto:info.studentsforhope@gmail.com?Subject=StudentsForHope%20Information" target="_top">info.studentsforhope@gmail.com</a>   </div>
                     </div>
