--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                                             </div>
                                             <br>
                                             <h4 class="feature-title h3-mobile"><u>Holidays Season</u> <br>❄️</h4>
-                                            <p class="text-sm">As the holidays approach us, we have been able to complete another successful donation this cold season. Thank you to Walmart, KHS SALC, the Panzer, Sreepada, and Lewis families for contributing to our cause!                <br> <br><br><b>12/23/19</b>  </p>
+                                            <p class="text-sm">As the holidays approach us, we have been able to complete another successful donation this cold season. Thank you to Walmart, Perry Family Dental Care, KHS SALC, the Panzer, Sreepada, and Lewis families for contributing to our cause!                <br> <br><br><b>12/23/19</b>  </p>
                                         </div>
                                     </div>
 
@@ -206,7 +206,7 @@
                                     </div>
                                     <br>
                                     <h4 class="feature-title h3-mobile"><u>Thanksgiving</u> <br>🦃</h4>
-                                    <p class="text-sm">We have reached our first deadline for Thanksgiving. Thank you to the Toadstool Bookshop, the Panzer, Boswell, Gigliello-Roy, Lewis, and Brown families for donating items!            <br>   <br> <br><br><b>11/26/19</b>  </p>
+                                    <p class="text-sm">We have reached our first deadline for Thanksgiving. Thank you to the Toadstool Bookshop, the Panzer, Boswell, Gigliello-Roy, Lewis, and Brown families for donating items!           <br> <br>   <br> <br><br><b>11/26/19</b>  </p>
                                 </div>
                             </div>
 
@@ -234,7 +234,7 @@
                                     </div>
                                     <br>
                                     <h4 class="feature-title h3-mobile"><u>Started Receiving Donations</u></h4>
-                                    <p class="text-sm">With the support and advice of our club advisor, Patrick Lagace, we are making smooth progress towards our goal. We have already started receiving donations! Thank you for the overwhelming support from our community.   <br> <br><br><b>11/8/19</b>   </p>
+                                    <p class="text-sm">With the support and advice of our club advisor, Patrick Lagace, we are making smooth progress towards our goal. We have already started receiving donations! Thank you for the overwhelming support from our community.   <br><br> <br><br><b>11/8/19</b>   </p>
                                 </div>
                             </div>
 
