--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                                                 </svg>
                                             </div>
                                             <br>
-                                            <h4 class="feature-title h3-mobile"><u>Holidays Season</u> <br>❄️</h4>
+                                            <h4 class="feature-title h3-mobile"><u>Holiday Season</u> <br>❄️</h4>
                                             <p class="text-sm">As the holidays approach us, we have been able to complete another successful donation this cold season. Thank you to Walmart, Perry Family Dental Care, KHS SALC, the Panzer, Sreepada, and Lewis families for contributing to our cause!                <br> <br><br><b>12/23/19</b>  </p>
                                         </div>
                                     </div>
