--- a/index.html
+++ b/index.html
@@ -153,6 +153,36 @@
                         <div class="features-wrap">
 
 
+
+                            <div class="feature is-revealing">
+                                <div class="feature-inner">
+                                    <div class="feature-icon">
+                                        <!-- <svg width="48" height="48" xmlns="http://www.w3.org/2000/svg"> -->
+                                            <img src="./src/img/nhFlag3.png" style="height: 150px; width: 150px;" >
+                                            <defs>
+                                                <linearGradient x1="50%" y1="100%" x2="50%" y2="0%" id="feature-1-a">
+                                                    <stop stop-color="#007CFE" stop-opacity="0" offset="0%"/>
+                                                    <stop stop-color="#007DFF" offset="100%"/>
+                                                </linearGradient>
+                                                <linearGradient x1="50%" y1="0%" x2="50%" y2="100%" id="feature-1-b">
+                                                    <stop stop-color="#FF4F7A" stop-opacity="0" offset="0%"/>
+                                                    <stop stop-color="#FF4F7A" offset="100%"/>
+                                                </linearGradient>
+                                            </defs>
+                                            <g fill="none" fill-rule="evenodd">
+                                                <path d="M8 0h24v24a8 8 0 0 1-8 8H0V8a8 8 0 0 1 8-8z" fill="url(#feature-1-a)"/>
+                                                <path d="M48 16v24a8 8 0 0 1-8 8H16c0-17.673 14.327-32 32-32z" fill="url(#feature-1-b)"/>
+                                            </g>
+                                        </svg>
+                                    </div>
+                                    <br>
+                                    <h4 class="feature-title h3-mobile"><u>Granite Stater Of The Month</u></h4>
+                                    <p class="text-sm">Senator Maggie Hassan recognizes Rahul and Karthik as January’s Granite Staters of the Month for their efforts to organize donation drives to support patients at the local cancer center. Click <a href="https://www.hassan.senate.gov/news/press-releases/senator-hassan-recognizes-rahul-and-karthik-chalumuri-of-keene-as-januarys-granite-staters-of-the-month">here</a> to view.</a>    <br><br> <br><br><b>01/21/20</b>   </p>
+                                </div>
+                            </div>
+
+
+
                                 <div class="feature is-revealing">
                                         <div class="feature-inner">
                                             <div class="feature-icon">
@@ -267,7 +297,7 @@
 
                 
                     </ul>
-                    <div class="footer-copyright">&copy; 2019 SFC, Created by Rahul Ch.
+                    <div class="footer-copyright">&copy; 2020 SFC, Created by Rahul Ch.
                     <div class="footerEmail">
                     <br><br><a href="mailto:info.studentsforhope@gmail.com?Subject=StudentsForHope%20Information" target="_top">info.studentsforhope@gmail.com</a>   </div>
                     </div>
